--- a/src/main/resources/views/createGame.fxml
+++ b/src/main/resources/views/createGame.fxml
@@ -6,145 +6,145 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.CreateGameController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0"
+            prefWidth="1152.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="gui.controllers.CreateGameController">
     <children>
-        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="321.0" prefHeight="80.0" style="-fx-background-color: #fdf8da;" text="Create Game " textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="321.0" prefHeight="80.0"
+               style="-fx-background-color: #fdf8da;" text="Create Game " textAlignment="CENTER"
+               AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <font>
-                <Font name="Chalkboard" size="48.0" />
+                <Font name="Chalkboard" size="48.0"/>
             </font>
         </Label>
-        <Label layoutX="278.0" layoutY="331.0" prefHeight="100.0" style="-fx-background-color: #fdf8da;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-        <Button mnemonicParsing="false" onMouseClicked="#backToPlayScrabble" prefHeight="37.0" prefWidth="207.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Back To Player Lobby" textAlignment="CENTER" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="20.0">
+        <Label layoutX="278.0" layoutY="331.0" prefHeight="100.0" style="-fx-background-color: #fdf8da;"
+               AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
+        <Button mnemonicParsing="false" onMouseClicked="#backToPlayScrabble" prefHeight="37.0" prefWidth="231.0"
+                styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="&lt;Back To Play Scrabble"
+                textAlignment="CENTER" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="20.0">
             <font>
-                <Font name="Chalkboard" size="18.0" />
+                <Font name="Chalkboard" size="18.0"/>
             </font>
         </Button>
-        <Button layoutX="990.0" layoutY="18.0" mnemonicParsing="false" onMouseClicked="#exitGame" prefHeight="35.0" prefWidth="140.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="EXIT" textAlignment="CENTER" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0">
+        <Button layoutX="990.0" layoutY="18.0" mnemonicParsing="false" onMouseClicked="#exitGame" prefHeight="35.0"
+                prefWidth="140.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="EXIT"
+                textAlignment="CENTER" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0">
             <font>
-                <Font name="Chalkboard" size="18.0" />
+                <Font name="Chalkboard" size="18.0"/>
             </font>
         </Button>
-          <VBox alignment="CENTER" prefHeight="450.0" prefWidth="600.0" spacing="20.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="80.0">
-              <children>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#gameView" prefHeight="100.0" prefWidth="400.0" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Creating Game..." textAlignment="CENTER">
-                      <VBox.margin>
-                          <Insets />
-                      </VBox.margin>
-                      <font>
-                          <Font name="Chalkboard" size="36.0" />
-                      </font>
-                  </Button>
-            <GridPane>
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-            </GridPane>
-            <HBox prefHeight="191.0" prefWidth="559.0">
-               <padding>
-                  <Insets right="100.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets left="350.0" right="350.0" />
-               </VBox.margin>
-               <children>
-                  <BorderPane prefHeight="191.0" prefWidth="600.0">
-                     <left>
-                        <VBox prefHeight="188.0" prefWidth="179.0" BorderPane.alignment="CENTER">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Search Player: " wrappingWidth="153.73281860351562">
-                                 <font>
-                                    <Font name="Chalkboard" size="18.0" />
-                                 </font>
-                                 <VBox.margin>
-                                    <Insets left="10.0" top="20.0" />
-                                 </VBox.margin>
-                              </Text>
-                              <TextField prefHeight="41.0" prefWidth="159.0">
-                                 <VBox.margin>
-                                    <Insets left="10.0" right="10.0" top="10.0" />
-                                 </VBox.margin>
-                              </TextField>
-                              <Button mnemonicParsing="false" text="+">
-                                 <VBox.margin>
-                                    <Insets left="120.0" top="10.0" />
-                                 </VBox.margin>
-                                 <font>
-                                    <Font size="24.0" />
-                                 </font>
-                              </Button>
-                              <Button mnemonicParsing="false" text="START">
-                                 <font>
-                                    <Font size="24.0" />
-                                 </font>
-                                 <VBox.margin>
-                                    <Insets left="10.0" />
-                                 </VBox.margin>
-                              </Button>
-                           </children>
-                        </VBox>
-                     </left>
-                     <center>
-                        <VBox prefHeight="191.0" prefWidth="169.0" BorderPane.alignment="CENTER">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Scrabble Teammembers">
-                                 <font>
-                                    <Font name="Chalkboard" size="18.0" />
-                                 </font>
-                                 <VBox.margin>
-                                    <Insets left="10.0" top="20.0" />
-                                 </VBox.margin>
-                              </Text>
-                              <TextArea prefHeight="43.0" prefWidth="167.0">
-                                 <padding>
-                                    <Insets left="10.0" right="10.0" />
-                                 </padding>
-                                 <VBox.margin>
-                                    <Insets top="10.0" />
-                                 </VBox.margin>
-                              </TextArea>
-                              <TextArea layoutX="10.0" layoutY="63.0" prefHeight="43.0" prefWidth="167.0">
-                                 <padding>
-                                    <Insets left="10.0" right="10.0" />
-                                 </padding>
-                              </TextArea>
-                              <TextArea layoutX="10.0" layoutY="106.0" prefHeight="43.0" prefWidth="167.0">
-                                 <padding>
-                                    <Insets left="10.0" right="10.0" />
-                                 </padding>
-                              </TextArea>
-                           </children>
-                        </VBox>
-                     </center>
-                     <right>
-                        <VBox prefHeight="191.0" prefWidth="114.0" BorderPane.alignment="CENTER">
-                           <children>
-                              <Button mnemonicParsing="false" prefHeight="53.0" prefWidth="127.0" text="Game  Settings">
-                                 <VBox.margin>
-                                    <Insets top="60.0" />
-                                 </VBox.margin>
-                              </Button>
-                           </children>
-                        </VBox>
-                     </right>
-                  </BorderPane>
-               </children>
-            </HBox>
-              </children>
-          </VBox>
+        <VBox alignment="CENTER" prefHeight="450.0" prefWidth="600.0" spacing="20.0" AnchorPane.bottomAnchor="100.0"
+              AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="80.0">
+            <children>
+                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="100.0"
+                        prefWidth="400.0" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css"
+                        text="Creating Game..." textAlignment="CENTER">
+                    <VBox.margin>
+                        <Insets/>
+                    </VBox.margin>
+                    <font>
+                        <Font name="Chalkboard" size="36.0"/>
+                    </font>
+                </Button>
+                <GridPane prefHeight="186.0" prefWidth="952.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES"/>
+                        <RowConstraints maxHeight="80.0" minHeight="9.0" prefHeight="52.0" vgrow="SOMETIMES"/>
+                        <RowConstraints maxHeight="98.0" minHeight="10.0" prefHeight="55.0" vgrow="SOMETIMES"/>
+                    </rowConstraints>
+                    <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Search Player: "
+                              wrappingWidth="186.73281860351562">
+                            <font>
+                                <Font name="Chalkboard" size="24.0"/>
+                            </font>
+                            <GridPane.margin>
+                                <Insets left="50.0"/>
+                            </GridPane.margin>
+                        </Text>
+                        <Button mnemonicParsing="false" onMouseClicked="#gameView" prefHeight="51.0" prefWidth="124.0"
+                                styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="START"
+                                GridPane.rowIndex="2">
+                            <font>
+                                <Font size="24.0"/>
+                            </font>
+                            <GridPane.margin>
+                                <Insets left="50.0"/>
+                            </GridPane.margin>
+                        </Button>
+                        <TextField prefHeight="48.0" prefWidth="162.0" GridPane.rowIndex="1">
+                            <opaqueInsets>
+                                <Insets/>
+                            </opaqueInsets>
+                            <GridPane.margin>
+                                <Insets left="50.0" right="200.0"/>
+                            </GridPane.margin>
+                        </TextField>
+                        <Button mnemonicParsing="false" text="+" GridPane.rowIndex="1">
+                            <font>
+                                <Font size="24.0"/>
+                            </font>
+                            <GridPane.margin>
+                                <Insets left="300.0"/>
+                            </GridPane.margin>
+                        </Button>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Your Scrabble Teammembers:"
+                              GridPane.columnIndex="1">
+                            <font>
+                                <Font name="Chalkboard" size="24.0"/>
+                            </font>
+                        </Text>
+                        <TextArea prefHeight="43.0" prefWidth="226.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                            <padding>
+                                <Insets left="10.0" right="10.0"/>
+                            </padding>
+                            <GridPane.margin>
+                                <Insets bottom="5.0" right="250.0" top="5.0"/>
+                            </GridPane.margin>
+                        </TextArea>
+                        <TextArea prefHeight="43.0" prefWidth="167.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                            <padding>
+                                <Insets left="10.0" right="10.0"/>
+                            </padding>
+                            <GridPane.margin>
+                                <Insets bottom="5.0" right="250.0" top="5.0"/>
+                            </GridPane.margin>
+                        </TextArea>
+                        <TextArea prefHeight="43.0" prefWidth="167.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                            <padding>
+                                <Insets left="10.0" right="10.0"/>
+                            </padding>
+                            <GridPane.margin>
+                                <Insets bottom="5.0" left="250.0" top="5.0"/>
+                            </GridPane.margin>
+                        </TextArea>
+                        <Button mnemonicParsing="false" prefHeight="47.0" prefWidth="233.0" styleClass="bigButton"
+                                stylesheets="@../stylesheets/buttonstyle.css" text="Game Settings"
+                                GridPane.columnIndex="1" GridPane.rowIndex="2">
+                            <GridPane.margin>
+                                <Insets left="250.0"/>
+                            </GridPane.margin>
+                            <font>
+                                <Font name="Chalkboard" size="24.0"/>
+                            </font>
+                        </Button>
+                    </children>
+                    <VBox.margin>
+                        <Insets bottom="100.0" left="100.0" right="100.0" top="50.0"/>
+                    </VBox.margin>
+                </GridPane>
+            </children>
+        </VBox>
     </children>
 </AnchorPane>
