--- a/src/main/resources/views/createGame.fxml
+++ b/src/main/resources/views/createGame.fxml
@@ -15,145 +15,130 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0"
-            prefWidth="1152.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="gui.controllers.CreateGameController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.CreateGameController">
     <children>
-        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="321.0" prefHeight="80.0"
-               style="-fx-background-color: #fdf8da;" text="Create Game " textAlignment="CENTER"
-               AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="321.0" prefHeight="80.0" style="-fx-background-color: #fdf8da;" text="Create Game " textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <font>
-                <Font name="Chalkboard" size="48.0"/>
+                <Font name="Chalkboard" size="48.0" />
             </font>
         </Label>
-        <Label layoutX="278.0" layoutY="331.0" prefHeight="100.0" style="-fx-background-color: #fdf8da;"
-               AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
-        <Button mnemonicParsing="false" onMouseClicked="#backToPlayScrabble" prefHeight="37.0" prefWidth="207.0"
-                styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Back To Player Lobby"
-                textAlignment="CENTER" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="20.0">
+        <Label layoutX="278.0" layoutY="331.0" prefHeight="100.0" style="-fx-background-color: #fdf8da;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+        <Button mnemonicParsing="false" onMouseClicked="#backToPlayScrabble" prefHeight="37.0" prefWidth="207.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Back To Player Lobby" textAlignment="CENTER" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="20.0">
             <font>
-                <Font name="Chalkboard" size="18.0"/>
+                <Font name="Chalkboard" size="18.0" />
             </font>
         </Button>
-        <Button layoutX="990.0" layoutY="18.0" mnemonicParsing="false" onMouseClicked="#exitGame" prefHeight="35.0"
-                prefWidth="140.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="EXIT"
-                textAlignment="CENTER" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0">
+        <Button layoutX="990.0" layoutY="18.0" mnemonicParsing="false" onMouseClicked="#exitGame" prefHeight="35.0" prefWidth="140.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="EXIT" textAlignment="CENTER" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0">
             <font>
-                <Font name="Chalkboard" size="18.0"/>
+                <Font name="Chalkboard" size="18.0" />
             </font>
         </Button>
-        <VBox alignment="CENTER" prefHeight="450.0" prefWidth="600.0" spacing="20.0" AnchorPane.bottomAnchor="100.0"
-              AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="80.0">
+        <VBox alignment="CENTER" layoutY="80.0" prefHeight="450.0" prefWidth="600.0" spacing="20.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="80.0">
             <children>
-                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#gameView"
-                        prefHeight="100.0" prefWidth="400.0" styleClass="bigButton"
-                        stylesheets="@../stylesheets/buttonstyle.css" text="Creating Game..." textAlignment="CENTER">
-                    <VBox.margin>
-                        <Insets/>
-                    </VBox.margin>
-                    <font>
-                        <Font name="Chalkboard" size="36.0"/>
-                    </font>
-                </Button>
-                <GridPane>
+                <GridPane prefHeight="544.0" prefWidth="983.0">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                  <RowConstraints maxHeight="133.56509399414062" minHeight="10.0" prefHeight="85.73809814453125" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="133.56509399414062" minHeight="10.0" prefHeight="85.73809814453125" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="192.5880889892578" minHeight="10.0" prefHeight="81.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="194.41506958007812" minHeight="0.0" prefHeight="79.5" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="194.41506958007812" minHeight="10.0" prefHeight="85.23809814453125" vgrow="SOMETIMES" />
                     </rowConstraints>
+               <children>
+                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Search Player: " wrappingWidth="181.08123779296875" GridPane.rowIndex="1">
+                                <font>
+                                    <Font name="Chalkboard" size="24.0" />
+                                </font>
+                     <GridPane.margin>
+                        <Insets left="80.0" />
+                     </GridPane.margin>
+                            </Text>
+                            <Button mnemonicParsing="false" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="START" GridPane.rowIndex="3">
+                                <font>
+                                    <Font size="24.0" />
+                                </font>
+                     <GridPane.margin>
+                        <Insets left="100.0" />
+                     </GridPane.margin>
+                            </Button>
+                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Scrabble Teammembers:" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                <font>
+                                    <Font name="Chalkboard" size="24.0" />
+                                </font>
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                            </Text>
+                            <Button mnemonicParsing="false" prefHeight="53.0" prefWidth="127.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Game  Settings" GridPane.columnIndex="2" GridPane.rowIndex="4">
+                     <GridPane.margin>
+                        <Insets left="100.0" />
+                     </GridPane.margin></Button>
+                  <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2">
+                     <children>
+                                  <TextField prefHeight="48.0" prefWidth="208.0">
+                           <HBox.margin>
+                              <Insets left="20.0" top="10.0" />
+                           </HBox.margin>
+                                  </TextField>
+                                  <Button mnemonicParsing="false" prefHeight="49.0" prefWidth="49.0" text="+">
+                                      <font>
+                                          <Font size="24.0" />
+                                      </font>
+                           <HBox.margin>
+                              <Insets left="20.0" top="10.0" />
+                           </HBox.margin>
+                                  </Button>
+                     </children>
+                  </HBox>
+                      <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#gameView" prefHeight="100.0" prefWidth="400.0" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Creating Game..." textAlignment="CENTER" GridPane.columnIndex="1">
+                          <font>
+                              <Font name="Chalkboard" size="24.0" />
+                          </font>
+                     <GridPane.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" />
+                     </GridPane.margin>
+                      </Button>
+                  <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <GridPane.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </GridPane.margin>
+                  </TextArea>
+                  <TextArea layoutX="338.0" layoutY="176.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </GridPane.margin>
+                  </TextArea>
+                  <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                     <GridPane.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </GridPane.margin>
+                  </TextArea>
+               </children>
+               <VBox.margin>
+                  <Insets left="100.0" right="100.0" top="100.0" />
+               </VBox.margin>
                 </GridPane>
                 <HBox prefHeight="191.0" prefWidth="559.0">
                     <padding>
-                        <Insets right="100.0"/>
+                        <Insets right="100.0" />
                     </padding>
                     <VBox.margin>
-                        <Insets left="350.0" right="350.0"/>
+                        <Insets left="350.0" right="350.0" />
                     </VBox.margin>
                     <children>
                         <BorderPane prefHeight="191.0" prefWidth="600.0">
                             <left>
-                                <VBox prefHeight="188.0" prefWidth="179.0" BorderPane.alignment="CENTER">
-                                    <children>
-                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Search Player: "
-                                              wrappingWidth="153.73281860351562">
-                                            <font>
-                                                <Font name="Chalkboard" size="18.0"/>
-                                            </font>
-                                            <VBox.margin>
-                                                <Insets left="10.0" top="20.0"/>
-                                            </VBox.margin>
-                                        </Text>
-                                        <TextField prefHeight="41.0" prefWidth="159.0">
-                                            <VBox.margin>
-                                                <Insets left="10.0" right="10.0" top="10.0"/>
-                                            </VBox.margin>
-                                        </TextField>
-                                        <Button mnemonicParsing="false" text="+">
-                                            <VBox.margin>
-                                                <Insets left="120.0" top="10.0"/>
-                                            </VBox.margin>
-                                            <font>
-                                                <Font size="24.0"/>
-                                            </font>
-                                        </Button>
-                                        <Button mnemonicParsing="false" text="START">
-                                            <font>
-                                                <Font size="24.0"/>
-                                            </font>
-                                            <VBox.margin>
-                                                <Insets left="10.0"/>
-                                            </VBox.margin>
-                                        </Button>
-                                    </children>
-                                </VBox>
+                                <VBox prefHeight="188.0" prefWidth="179.0" BorderPane.alignment="CENTER" />
                             </left>
                             <center>
-                                <VBox prefHeight="191.0" prefWidth="169.0" BorderPane.alignment="CENTER">
-                                    <children>
-                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Scrabble Teammembers">
-                                            <font>
-                                                <Font name="Chalkboard" size="18.0"/>
-                                            </font>
-                                            <VBox.margin>
-                                                <Insets left="10.0" top="20.0"/>
-                                            </VBox.margin>
-                                        </Text>
-                                        <TextArea prefHeight="43.0" prefWidth="167.0">
-                                            <padding>
-                                                <Insets left="10.0" right="10.0"/>
-                                            </padding>
-                                            <VBox.margin>
-                                                <Insets top="10.0"/>
-                                            </VBox.margin>
-                                        </TextArea>
-                                        <TextArea layoutX="10.0" layoutY="63.0" prefHeight="43.0" prefWidth="167.0">
-                                            <padding>
-                                                <Insets left="10.0" right="10.0"/>
-                                            </padding>
-                                        </TextArea>
-                                        <TextArea layoutX="10.0" layoutY="106.0" prefHeight="43.0" prefWidth="167.0">
-                                            <padding>
-                                                <Insets left="10.0" right="10.0"/>
-                                            </padding>
-                                        </TextArea>
-                                    </children>
-                                </VBox>
+                                <VBox prefHeight="191.0" prefWidth="169.0" BorderPane.alignment="CENTER" />
                             </center>
                             <right>
-                                <VBox prefHeight="191.0" prefWidth="114.0" BorderPane.alignment="CENTER">
-                                    <children>
-                                        <Button mnemonicParsing="false" prefHeight="53.0" prefWidth="127.0"
-                                                text="Game  Settings">
-                                            <VBox.margin>
-                                                <Insets top="60.0"/>
-                                            </VBox.margin>
-                                        </Button>
-                                    </children>
-                                </VBox>
+                                <VBox prefHeight="191.0" prefWidth="114.0" BorderPane.alignment="CENTER" />
                             </right>
                         </BorderPane>
                     </children>
