--- a/src/main/resources/views/gameView2.fxml
+++ b/src/main/resources/views/gameView2.fxml
@@ -266,7 +266,7 @@
                 </HBox>
             </right>
          <center>
-            <GridPane gridLinesVisible="true" hgap="10.0" BorderPane.alignment="CENTER">
+            <GridPane fx:id="tiles" alignment="CENTER" hgap="10.0" BorderPane.alignment="CENTER">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -280,11 +280,8 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <BorderPane.margin>
-                  <Insets bottom="30.0" left="40.0" right="40.0" top="30.0" />
+                  <Insets bottom="25.0" left="35.0" right="35.0" top="25.0" />
                </BorderPane.margin>
-               <children>
-                  <Label fx:id="buchstabe1" text="Label" GridPane.columnIndex="6" />
-               </children>
             </GridPane>
          </center>
         </BorderPane>
