--- a/src/main/resources/views/createGame.fxml
+++ b/src/main/resources/views/createGame.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -49,15 +48,7 @@
                   <RowConstraints maxHeight="194.41506958007812" minHeight="10.0" prefHeight="85.23809814453125" vgrow="SOMETIMES" />
                     </rowConstraints>
                <children>
-                            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Search Player: " wrappingWidth="181.08123779296875" GridPane.rowIndex="1">
-                                <font>
-                                    <Font name="Chalkboard" size="24.0" />
-                                </font>
-                     <GridPane.margin>
-                        <Insets left="80.0" />
-                     </GridPane.margin>
-                            </Text>
-                            <Button mnemonicParsing="false" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="START" GridPane.rowIndex="3">
+                            <Button mnemonicParsing="false" onMouseClicked="#gameView" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="START" GridPane.columnIndex="2" GridPane.rowIndex="3">
                                 <font>
                                     <Font size="24.0" />
                                 </font>
@@ -73,28 +64,15 @@
                         <Insets left="20.0" />
                      </GridPane.margin>
                             </Text>
-                            <Button mnemonicParsing="false" prefHeight="53.0" prefWidth="127.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Game  Settings" GridPane.columnIndex="2" GridPane.rowIndex="4">
+                            <Button mnemonicParsing="false" onMouseClicked="#gameSettings" prefHeight="53.0" prefWidth="203.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Game Settings" GridPane.columnIndex="2" GridPane.rowIndex="4">
                      <GridPane.margin>
-                        <Insets left="100.0" />
-                     </GridPane.margin></Button>
-                  <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2">
-                     <children>
-                                  <TextField prefHeight="48.0" prefWidth="208.0">
-                           <HBox.margin>
-                              <Insets left="20.0" top="10.0" />
-                           </HBox.margin>
-                                  </TextField>
-                                  <Button mnemonicParsing="false" prefHeight="49.0" prefWidth="49.0" text="+">
-                                      <font>
-                                          <Font size="24.0" />
-                                      </font>
-                           <HBox.margin>
-                              <Insets left="20.0" top="10.0" />
-                           </HBox.margin>
-                                  </Button>
-                     </children>
-                  </HBox>
-                      <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#gameView" prefHeight="100.0" prefWidth="400.0" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Creating Game..." textAlignment="CENTER" GridPane.columnIndex="1">
+                        <Insets left="50.0" />
+                     </GridPane.margin>
+                     <font>
+                        <Font name="Chalkboard" size="24.0" />
+                     </font></Button>
+                  <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2" />
+                      <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="100.0" prefWidth="400.0" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Creating Game..." textAlignment="CENTER" GridPane.columnIndex="1">
                           <font>
                               <Font name="Chalkboard" size="24.0" />
                           </font>
@@ -102,17 +80,17 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" />
                      </GridPane.margin>
                       </Button>
-                  <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                  <TextArea fx:id="PlayerThree" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </TextArea>
-                  <TextArea layoutX="338.0" layoutY="176.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <TextArea fx:id="PlayerTwo" layoutX="338.0" layoutY="176.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </TextArea>
-                  <TextArea prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                  <TextArea fx:id="PlayerFour" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
