--- a/src/main/resources/views/errorMessage.fxml
+++ b/src/main/resources/views/errorMessage.fxml
@@ -6,33 +6,32 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="137.0" prefWidth="182.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controllers.WaitingLobbyMessageController">
+<AnchorPane prefHeight="137.0" prefWidth="182.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ErrorMessageController">
    <children>
       <VBox prefHeight="169.0" prefWidth="183.0" style="-fx-background-color: #fbf8da #fbf8da #fbf8da #fbf8da;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="The Game ">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Wrong IP">
                <font>
                   <Font name="Chalkboard" size="24.0" />
                </font>
                <VBox.margin>
-                  <Insets left="45.0" top="15.0" />
+                  <Insets left="40.0" top="15.0" />
                </VBox.margin>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="will start soon. ">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Entered.">
                <font>
                   <Font name="Chalkboard" size="24.0" />
                </font>
                <VBox.margin>
-                  <Insets left="10.0" />
+                  <Insets left="45.0" />
                </VBox.margin>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Good Luck!">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Retry Please.">
                <font>
                   <Font name="Chalkboard" size="24.0" />
                </font>
                <VBox.margin>
-                  <Insets left="35.0" top="20.0" />
+                  <Insets left="20.0" top="20.0" />
                </VBox.margin>
             </Text>
          </children>
