--- a/src/main/resources/views/gameChat.fxml
+++ b/src/main/resources/views/gameChat.fxml
@@ -10,12 +10,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="402.0" prefWidth="288.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.gameChatController">
    <children>
       <VBox layoutX="100.0" layoutY="-1.0" prefHeight="403.0" prefWidth="288.0" style="-fx-background-color: #fbf8da #fbf8da;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-1.0">
          <children>
-            <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="41.0" text="X">
+            <Button mnemonicParsing="false" onMouseClicked="#closeChat" prefHeight="34.0" prefWidth="41.0" text="X">
                <VBox.margin>
                   <Insets left="240.0" right="10.0" top="10.0" />
                </VBox.margin>
@@ -27,12 +26,7 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="502.0" prefWidth="266.0">
                      <children>
-                        <TextArea layoutX="12.0" layoutY="23.0" prefHeight="75.0" prefWidth="230.0" />
-                        <TextArea layoutX="15.0" layoutY="184.0" prefHeight="75.0" prefWidth="230.0" />
-                        <TextArea layoutX="13.0" layoutY="103.0" prefHeight="75.0" prefWidth="230.0" />
-                        <TextArea layoutX="16.0" layoutY="267.0" prefHeight="75.0" prefWidth="230.0" />
-                        <TextArea layoutX="14.0" layoutY="421.0" prefHeight="75.0" prefWidth="230.0" />
-                        <TextArea layoutX="19.0" layoutY="345.0" prefHeight="75.0" prefWidth="230.0" />
+                        <TextArea fx:id="messageDisplay" layoutX="14.0" layoutY="16.0" prefHeight="470.0" prefWidth="224.0" />
                      </children>
                   </AnchorPane>
               </content>
@@ -42,12 +36,12 @@
             </ScrollPane>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <TextField prefHeight="59.0" prefWidth="207.0">
+                  <TextField fx:id="inputMessage" prefHeight="59.0" prefWidth="207.0">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
                   </TextField>
-                  <Button mnemonicParsing="false" prefHeight="39.0" prefWidth="64.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="SEND">
+                  <Button fx:id="sendButton" mnemonicParsing="false" onMouseClicked="#sendMessage" prefHeight="39.0" prefWidth="64.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="SEND">
                      <HBox.margin>
                         <Insets bottom="10.0" right="10.0" top="20.0" />
                      </HBox.margin>
