--- a/src/main/resources/views/joinGameView.fxml
+++ b/src/main/resources/views/joinGameView.fxml
@@ -3,72 +3,71 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0"
-            prefWidth="1152.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="gui.controllers.JoinGameController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.JoinGameController">
     <children>
-        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="321.0" prefHeight="80.0"
-               style="-fx-background-color: #fdf8da;" text="Join Game" textAlignment="CENTER"
-               AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="321.0" prefHeight="80.0" style="-fx-background-color: #fdf8da;" text="Join Game" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <font>
-                <Font name="Chalkboard" size="48.0"/>
+                <Font name="Chalkboard" size="48.0" />
             </font>
         </Label>
-        <Label layoutX="278.0" layoutY="331.0" prefHeight="100.0" style="-fx-background-color: #fdf8da;"
-               AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
-        <Button mnemonicParsing="false" onMouseClicked="#backToPlayScrabble" prefHeight="37.0" prefWidth="207.0"
-                styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Back To Player Lobby"
-                textAlignment="CENTER" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="20.0">
+        <Label layoutX="278.0" layoutY="331.0" prefHeight="100.0" style="-fx-background-color: #fdf8da;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+        <Button mnemonicParsing="false" onMouseClicked="#backToPlayScrabble" prefHeight="37.0" prefWidth="207.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Back To Player Lobby" textAlignment="CENTER" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="20.0">
             <font>
-                <Font name="Chalkboard" size="18.0"/>
+                <Font name="Chalkboard" size="18.0" />
             </font>
         </Button>
-        <Button layoutX="990.0" layoutY="18.0" mnemonicParsing="false" onMouseClicked="#exitGame" prefHeight="35.0"
-                prefWidth="140.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="EXIT"
-                textAlignment="CENTER" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0">
+        <Button layoutX="990.0" layoutY="18.0" mnemonicParsing="false" onMouseClicked="#exitGame" prefHeight="35.0" prefWidth="140.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="EXIT" textAlignment="CENTER" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0">
             <font>
-                <Font name="Chalkboard" size="18.0"/>
+                <Font name="Chalkboard" size="18.0" />
             </font>
         </Button>
-        <BorderPane layoutX="477.0" layoutY="206.0" prefHeight="200.0" prefWidth="346.0" AnchorPane.bottomAnchor="100.0"
-                    AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="70.0">
+        <BorderPane layoutX="477.0" layoutY="206.0" prefHeight="200.0" prefWidth="346.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="70.0">
             <center>
-                <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0"
-                      BorderPane.alignment="CENTER">
+                <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false"
-                                onMouseClicked="#gameView" prefHeight="100.0" prefWidth="400.0" styleClass="bigButton"
-                                stylesheets="@../stylesheets/buttonstyle.css" text="Wating to join Game..."
-                                textAlignment="CENTER">
+                        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#gameView" prefHeight="100.0" prefWidth="400.0" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Wating to join Game..." textAlignment="CENTER">
                             <VBox.margin>
-                                <Insets/>
+                                <Insets />
                             </VBox.margin>
                             <font>
-                                <Font name="Chalkboard" size="24.0"/>
+                                <Font name="Chalkboard" size="24.0" />
                             </font>
                         </Button>
-                        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false"
-                                onMouseClicked="#gameView" prefHeight="100.0" prefWidth="400.0" styleClass="bigButton"
-                                stylesheets="@../stylesheets/buttonstyle.css" text="Enter IP..">
+                  <HBox prefHeight="100.0" prefWidth="802.0">
+                     <children>
+                        <TextField fx:id="ipField" prefHeight="62.0" prefWidth="230.0">
+                           <HBox.margin>
+                              <Insets right="10.0" top="20.0" />
+                           </HBox.margin>
+                        </TextField>
+                              <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#checkEnterIP" prefHeight="63.0" prefWidth="157.0" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="Enter IP">
+                                  <font>
+                                      <Font name="Chalkboard" size="24.0" />
+                                  </font>
+                           <HBox.margin>
+                              <Insets top="20.0" />
+                           </HBox.margin>
+                              </Button>
+                     </children>
+                     <VBox.margin>
+                        <Insets left="350.0" right="200.0" />
+                     </VBox.margin>
+                  </HBox>
+                        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#gameView" prefHeight="100.0" prefWidth="169.0" styleClass="bigButton" stylesheets="@../stylesheets/buttonstyle.css" text="JOIN">
                             <font>
-                                <Font name="Chalkboard" size="24.0"/>
-                            </font>
-                        </Button>
-                        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false"
-                                onMouseClicked="#gameView" prefHeight="100.0" prefWidth="169.0" styleClass="bigButton"
-                                stylesheets="@../stylesheets/buttonstyle.css" text="JOIN">
-                            <font>
-                                <Font name="Chalkboard" size="24.0"/>
+                                <Font name="Chalkboard" size="24.0" />
                             </font>
                         </Button>
                     </children>
                     <BorderPane.margin>
-                        <Insets bottom="30.0" left="30.0" right="30.0" top="50.0"/>
+                        <Insets bottom="30.0" left="30.0" right="30.0" top="50.0" />
                     </BorderPane.margin>
                 </VBox>
             </center>
